# LANShare

./: .gitignore  CMakeLists.txt  FileTransfer.cpp  FileTransfer.hpp  Makefile  MessageCodec.hpp  NetworkManager.cpp  NetworkManager.h  README.md  SubnetBroadcaster.cpp  SubnetBroadcaster.hpp  SubnetListener.cpp  SubnetListener.hpp  UI.cpp  UI.hpp  UIQt.cpp  UIQt.hpp  main.cpp
